--- a/src/package.json
+++ b/src/package.json
@@ -18,12 +18,13 @@
     "@angular/platform-browser": "^18.0.4",
     "@angular/platform-browser-dynamic": "^18.0.4",
     "@angular/router": "^18.0.4",
+    "@apollo/client": "^3.0.0",
     "apollo-angular": "^7.0.2",
+    "graphql": "^16",
+    "mailslurp-client": "^15.20.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.7",
-    "@apollo/client": "^3.0.0",
-    "graphql": "^16"
+    "zone.js": "~0.14.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.5",
